[gd_scene load_steps=2 format=3 uid="uid://dmurcg6mxa6l4"]

[ext_resource type="Script" path="res://Scripts/NewBoard.gd" id="1_2ypbo"]

[node name="NewBoard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ypbo")
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -279.0
offset_top = -276.0
offset_right = 280.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Confirm" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Confirm and make new board"

[node name="Cancel" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Cancel"

[node name="Tutorial" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Tutorial"

[node name="TileTexts" type="TextEdit" parent="."]
layout_mode = 2
anchor_left = 0.069
anchor_top = 0.102
anchor_right = 0.932
anchor_bottom = 0.419
offset_left = 0.511993
offset_top = -10.6
offset_right = 0.335938
offset_bottom = -0.200012
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Enter tiles
In format
Like this"
scroll_smooth = true

[connection signal="pressed" from="CenterContainer/VBoxContainer/Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
